fix alignments

--- a/menue/src/Components/Menue/Menue.css
+++ b/menue/src/Components/Menue/Menue.css
@@ -5,3 +5,6 @@
     flex-wrap: wrap;
     margin: auto;
 }
+.card{
+    
+}
